<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    android:id="@+id/parent"
    tools:context=".presentation.ui.fragments.auth.forgot.ForgotFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="128dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_registration_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="45dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="45dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:fontFamily="@font/noah_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/big_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/materialCardView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:textColorHint="#686868"
        app:boxBackgroundColor="@color/background_for_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inpur_number_or_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:fontFamily="@font/noah_regular"
            android:hint="@string/enter_hint_code"
            android:maxLines="1"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@color/main_gray"
            android:textSize="@dimen/small_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/noah_regular"
        android:text="@string/enter_number_phone_or_email"
        android:textColor="@color/main_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E65705"
        android:fontFamily="@font/noah_bold"
        android:text="@string/refresh"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:icon="@drawable/refresh_password"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noah_bold"
        android:text="@string/back"
        android:layout_marginBottom="54dp"
        android:textColor="@color/white"
        android:textSize="@dimen/small_size"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>