<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/dialog_report_inset">

    <TextView
        android:id="@+id/title_confirm_action_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_action"
        android:fontFamily="@font/noah_bold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/desc_confirm_action_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/noah_medium"
        android:text="Вы уверены, что хотите завершить все\nсеансы?"
        android:textColor="@color/main_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_confirm_action_tv" />

    <TextView
        android:id="@+id/cancel_action_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/noah_bold"
        android:text="@string/cancel_action"
        android:textColor="@color/main_gray"
        app:layout_constraintEnd_toStartOf="@+id/complete_action_tv"
        app:layout_constraintTop_toTopOf="@+id/complete_action_tv" />

    <TextView
        android:id="@+id/complete_action_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/noah_bold"
        android:text="@string/complete_action"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_confirm_action_tv"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>