<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_report_inset">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noah_bold"
        android:text="@string/confirm_action"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView38"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/noah_medium"
        android:layout_marginHorizontal="16dp"
        android:gravity="start"
        android:text="Вы уверены, что хотите выйти с текущего\nпрофиля?"
        android:textColor="@color/main_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <TextView
        android:id="@+id/cancel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/noah_bold"
        android:text="@string/cancel_action"
        android:textColor="@color/main_gray"
        android:textSize="@dimen/small_size"
        app:layout_constraintBottom_toBottomOf="@+id/exit_text"
        app:layout_constraintEnd_toStartOf="@+id/exit_text"
        app:layout_constraintTop_toTopOf="@+id/exit_text"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/exit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/noah_bold"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="@dimen/small_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

</androidx.constraintlayout.widget.ConstraintLayout>
