<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.ui.fragments.auth.forgot.ForgotNewPasswordFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="128dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_registration_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="45dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/noah_bold"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="@dimen/big_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/materialCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="#686868"
        app:boxBackgroundColor="@color/background_for_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView5"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/main_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/noah_regular"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/main_gray"
            android:textSize="@dimen/small_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/materialCardView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:textColorHint="#686868"
        app:boxBackgroundColor="@color/background_for_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/main_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/noah_regular"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/main_gray"
            android:textSize="@dimen/small_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E65705"
        android:fontFamily="@font/noah_bold"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:icon="@drawable/baseline_check_circle"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>